--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <title>Sam & Ryan</title>
     <style>@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:100,400,700');</style>
     <%= stylesheet_link_tag "site" %>
