--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,54 +1,61 @@
 <div class="site-container">
-  <nav class="site-nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a class="link nav-link" href="#details">Details</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="site-content">
+    <nav class="site-nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a class="link nav-link" href="#details">Details</a>
+        </li>
+      </ul>
+    </nav>
 
-  <section class="hero-container">
-    <div class="hero-intro">
-      A wedding for
-    </div>
-    <h1 class="hero-title">
-      Sam & Ryan
-    </h1>
-    <div class="hero-date">
-      on May 10, 2019 in Allenspark, Colorado
-    </div>
-  </section>
+    <section class="hero-container">
+      <div class="hero-intro">
+        A wedding for
+      </div>
+      <h1 class="hero-title">
+        Sam & Ryan
+      </h1>
+      <div class="hero-date">
+        on May 10, 2019 in Allenspark, Colorado
+      </div>
+    </section>
 
-  <section class="details-container">
-    <div class="nav-target">
-      <div id="details" class="nav-heading">The Details</div>
-    </div>
+    <section class="details-container">
+      <div class="nav-target">
+        <div id="details" class="nav-heading">The Details</div>
+      </div>
 
-    <div class="detail">
-      <div class="detail-left">
-        <p>When :</p>
+      <div class="detail">
+        <div class="detail-left">
+          <p>When :</p>
+        </div>
+        <div class="detail-right">
+          May 10th, 2019
+        </div>
       </div>
-      <div class="detail-right">
-        May 10th, 2019
-      </div>
-    </div>
 
-    <div class="detail">
-      <div class="detail-left">
-        <p>Where :</p>
+      <div class="detail">
+        <div class="detail-left">
+          <p>Where :</p>
+        </div>
+        <div class="detail-right">
+          <p>Wild Basin Lodge</p>
+          <p>1130 County Rd 84</p>
+          <p>Allenspark, CO 80510</p>
+        </div>
       </div>
-      <div class="detail-right">
-        <p>Wild Basin Lodge</p>
-        <p>1130 County Rd 84</p>
-        <p>Allenspark, CO 80510</p>
-      </div>
-    </div>
 
-    <div class="detail detail-tall">
-      <div class="detail-center">
-        <p>Ceremony at 3:30 pm,</p>
-        <p>Reception to follow</p>
+      <div class="detail detail-tall">
+        <div class="detail-center">
+          <p>Ceremony at 3:30 pm,</p>
+          <p>Reception to follow</p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
+
+  <footer class="site-footer">
+    <img class="footer-icon" src="/favicon-32x32.png"/>
+    <span>sam loves ryan</span>
+  </footer>
 </div>
